--- a/portal.html
+++ b/portal.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members Portal - Community SACCO</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
-    <!-- Header (same as index.html) -->
     <header>
         <div class="container">
             <div id="branding">
@@ -138,7 +137,7 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/form-validation.js"></script>
+    <script src="./main.js"></script>
+    <script src="./form-validation.js"></script>
 </body>
 </html>
