--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Community SACCO</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
     <!-- Header (same as index.html) -->
@@ -139,7 +139,7 @@
         </div>
     </footer>
 
-    <script src="/main.js"></script>
-    <script src="/form-validation.js"></script>
+    <script src="./main.js"></script>
+    <script src="./form-validation.js"></script>
 </body>
 </html>
