--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community SACCO - Home</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
     <!-- Header -->
@@ -103,6 +103,6 @@
         </div>
     </footer>
 
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
