--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Community SACCO</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
     <!-- Header (same as index.html) -->
@@ -185,6 +185,6 @@
         </div>
     </footer>
 
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
